--- a/extract_and_transform.ipynb
+++ b/extract_and_transform.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,7 @@
     "    new_column_names =[\"cement\",\"blast_furnace_slage\",\"fly_ash\",\"water\",\"superplasticizer\",\"coarse_aggregate\",\"fine_aggregate\",\"age\",\"compressive_strength\"]\n",
     "    #creates new dataframe from original dataframe with renamed columns\n",
     "    new_df=rename_cols(df,new_column_names)\n",
+    "    real_df=new_df\n",
     "    for i in range(50):\n",
     "        new_df.loc[len(new_df)] = 0.0\n",
     "    new_df.head()\n",
@@ -64,12 +65,12 @@
     "\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2,random_state=42)\n",
     "    \n",
-    "    return X_train,X_test,y_train,y_test"
+    "    return X_train,X_test,y_train,y_test,new_df,X,y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -248,10 +249,37 @@
        "        44.7 ,  7.4 , 30.28, 31.84, 43.01, 52.5 , 44.52, 24.28, 15.69,\n",
        "        44.52, 10.09, 11.58, 15.36, 22.72, 36.56, 22.5 ,  0.  ,  0.  ,\n",
        "        33.4 , 31.18, 45.71, 42.14, 40.15, 40.27, 56.34,  9.01, 19.69,\n",
-       "        44.39,  0.  , 45.37,  9.85, 44.61, 46.24, 67.31, 14.94, 29.93]))"
+       "        44.39,  0.  , 45.37,  9.85, 44.61, 46.24, 67.31, 14.94, 29.93]),\n",
+       "       cement  blast_furnace_slage  fly_ash  water  superplasticizer  \\\n",
+       " 0      540.0                  0.0      0.0  162.0               2.5   \n",
+       " 1      540.0                  0.0      0.0  162.0               2.5   \n",
+       " 2      332.5                142.5      0.0  228.0               0.0   \n",
+       " 3      332.5                142.5      0.0  228.0               0.0   \n",
+       " 4      198.6                132.4      0.0  192.0               0.0   \n",
+       " ...      ...                  ...      ...    ...               ...   \n",
+       " 1075     0.0                  0.0      0.0    0.0               0.0   \n",
+       " 1076     0.0                  0.0      0.0    0.0               0.0   \n",
+       " 1077     0.0                  0.0      0.0    0.0               0.0   \n",
+       " 1078     0.0                  0.0      0.0    0.0               0.0   \n",
+       " 1079     0.0                  0.0      0.0    0.0               0.0   \n",
+       " \n",
+       "       coarse_aggregate  fine_aggregate    age  compressive_strength  \n",
+       " 0               1040.0           676.0   28.0                 79.99  \n",
+       " 1               1055.0           676.0   28.0                 61.89  \n",
+       " 2                932.0           594.0  270.0                 40.27  \n",
+       " 3                932.0           594.0  365.0                 41.05  \n",
+       " 4                978.4           825.5  360.0                 44.30  \n",
+       " ...                ...             ...    ...                   ...  \n",
+       " 1075               0.0             0.0    0.0                  0.00  \n",
+       " 1076               0.0             0.0    0.0                  0.00  \n",
+       " 1077               0.0             0.0    0.0                  0.00  \n",
+       " 1078               0.0             0.0    0.0                  0.00  \n",
+       " 1079               0.0             0.0    0.0                  0.00  \n",
+       " \n",
+       " [1080 rows x 9 columns])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
