--- a/ann_regressor.ipynb
+++ b/ann_regressor.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "import extract_and_transform as et\n",
-    "X_train,X_test,y_train,y_test = et.training_data()"
+    "X_train,X_test,y_train,y_test,real_df,X,y = et.training_data()"
    ]
   },
   {
