made some edits to charts, graphs, and added some paragraphs. Also edited javascript code to remove graphs on reset.

--- a/extract_and_transform.ipynb
+++ b/extract_and_transform.ipynb
@@ -49,8 +49,8 @@
     "    #creates new dataframe from original dataframe with renamed columns\n",
     "    new_df=rename_cols(df,new_column_names)\n",
     "    real_df=new_df\n",
-    "    for i in range(50):\n",
-    "        new_df.loc[len(new_df)] = 0.0\n",
+    "#     for i in range(50):\n",
+    "#         new_df.loc[len(new_df)] = 0.0\n",
     "    new_df.head()\n",
     "\n",
     "    # Assign the data to X and y\n",
