added title to plot

--- a/random_forest_regr.ipynb
+++ b/random_forest_regr.ipynb
@@ -254,7 +254,7 @@
     "g.map_diag(sns.distplot)\n",
     "g.map_lower(sns.regplot)\n",
     "g.map_upper(reg_coef)\n",
-    "\n",
+    "plt.suptitle('Bivariate Relationships Between Concrete Components',y=0.99,x=0.60,fontsize=30)\n",
     "plt.tight_layout()\n",
     "plt.savefig('static/image/scatter_matrix_sns.png')\n",
     "plt.show()"
